# wimsey

./: .gitignore  404.html  LICENSE  README.md  cool.py  create_catalogue.py  index.html  justfile  mkdocs.yml  nice.yaml  pyproject.toml  zensical.toml
.github/workflows/: build-docs.yml  release.yml  unit-tests.yml
.woodpecker/: release.yaml  unit-tests.yaml
building-tests/: index.html
docs/: api.md  generate_possible_tests.py  index.md  motivation.md  possible-tests.md  quick-start.md  test-catalogue.md
docs/javascript/: dither.js
docs/stylesheets/: extra.css
motivation/: index.html
possible-tests/: index.html
possible_tests/: index.html
quick-start/: index.html
search/: search_index.json
src/wimsey/: __init__.py  config.py
tests/: example-failing.yaml  example-nonsense.yaml  example-passing.yaml  test_config.py  test_dataframe.py  test_exceptions.py  test_executions.py  test_profile.py  test_tests.py
wimsey/: config.py  dataframe.py  execution.py  profile.py  profiling.py  tests.py  types.py
