[project]
name = "wimsey"
dynamic = ["version"]
description = "A lightweight data contracts library"
requires-python = ">= 3.10"
authors = [
    { name = "Ben Rutter", email = "benrutter@posteo.net" }
]
dependencies = [
    "narwhals>=1.10.0",
    "fsspec>=2024.10.0",
]
readme = "README.md"
keywords = ["dataframes", "testing", "data", "science", "pipeline", "data-quality", "validation", "data-validation"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Free Threading :: 2 - Beta",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://codeberg.org/benrutter/wimsey"
Documentation = "https://benrutter.codeberg.page/wimsey-site/site/"
Repository = "https://codeberg.org/benrutter/wimsey"
Github = "https://github.com/benrutter/wimsey"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.21.0",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "polars>=1.10.0",
    "types-pyyaml>=6.0.12.20240917",
    "dask>=2024.10.0",
    "dask-expr>=1.1.16",
    "pytest>=8.3.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.42",
    "grip>=4.6.2",
    "mkdocs-charts-plugin>=0.0.12",
    "coverage>=7.6.10",
    "ty>=0.0.1a11",
    "ruff>=0.12.0",
    "pytest-cov>=7.1.0",
]


[tool.ruff]
line-length = 100
fix = true
include = ["wimsey/**.py"]
target-version = "py39"

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
typing-modules = ["narwhals._typing_compat"]

extend-safe-fixes = [
  "C419",    # unnecessary-comprehension-in-call
  "C420",    # unnecessary-dict-comprehension-for-iterable
  "PLR6201", # literal-membership
  "TC",      # flake8-type-checking
  "UP",      # pyupgrade
]
extend-select = [
  "PLR0914", # too-many-locals
  "PLR0916", # too-many-boolean-expressions
  "PLR1702", # too-many-nested-blocks
  "PLR6201", # literal-membership
]

select = [
    "W",
    "E",
    "A",
    "F",
    "D",
    "C4",
    "COM",
    "ERA",
    "ICN",
    "PIE",
    "RET",
    "SIM",
    "ARG",
    "I",
    "NPY",
    "N",
    "UP",
    "FURB",
    "FIX001",
    "FIX002",
    "TC001",
    "TC002",
    "TC003",
    "TC004",
    "ANN001",
    "ANN205",
    "ANN204",
]

ignore = [
    "E501",  # max-line-length-80
    "D203",  # blank-line-before-class-docstring
    "D213",  # multi-line-summary-second-line
]

[tool.coverage.report]
exclude_also = [
    'if TYPE_CHECKING:',
    '^\s*\.\.\.\s*$',  # <- line of "..." (no code)
    '^\s*pass\s*$',  # <- line of "pass"
]

[tool.coverage.run]
omit = [
  "*/tests/**",
]
